--- a/public/cart.html
+++ b/public/cart.html
@@ -42,6 +42,7 @@
           <button id="registerBtn" class="btn btn-secondary" type="button">新規登録</button>
           <button id="logoutBtn" class="btn btn-danger" type="button" style="display:none;">ログアウト</button>
           <span id="navUser" class="user-pill" hidden></span>
+          <a id="profileLink" href="./profile.html" style="display:none;margin-left:8px;">プロフィール</a>
         </div>
       </div>
     </nav>
