--- a/public/checkout.html
+++ b/public/checkout.html
@@ -20,6 +20,7 @@
         <button id="registerBtn" class="btn btn-secondary">新規登録</button>
         <button id="logoutBtn" class="btn btn-danger" style="display:none;">ログアウト</button>
         <span id="navUser" class="user-pill" hidden></span>
+        <a id="profileLink" href="./profile.html" style="display:none;margin-left:8px;">プロフィール</a>
       </div>
     </div>
   </header>
