--- a/public/admin.html
+++ b/public/admin.html
@@ -34,8 +34,11 @@
         <a href="./index.html">ホーム</a>
         <a href="./products.html">商品</a>
         <a href="./cart.html">カート</a>
+        <a href="./java-vuln.html" style="color:#ffd700;font-weight:bold;">Java脆弱性デモ</a>
+        <a href="./inventory.html" aria-current="page" style="font-weight:700;">在庫管理</a>
         <button id="logoutBtn" class="btn btn-danger">ログアウト</button>
         <span id="navUser" class="user-pill" hidden></span>
+        <a id="profileLink" href="./profile.html" style="display:none;margin-left:8px;">プロフィール</a>
       </div>
     </nav>
   </header>
